--- a/losers-sever/package.json
+++ b/losers-sever/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/a382259104/Losers#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.1"
   }
