--- a/losers-server/package.json
+++ b/losers-server/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongoose": "^8.3.1"
+    "express-session": "^1.18.0",
+    "mongoose": "^8.3.1",
+    "session": "^0.1.0"
   }
 }
